<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailIphoneActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#232D3F"
        app:title="@string/phone_name"
        app:titleTextAppearance="@style/ToolbarFont"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_back"/>

    <ImageView
        android:id="@+id/img_item_product"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/toolbar"
        android:padding="20dp"
        android:src="@drawable/iphone_15_pro" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_item_product"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/dapatkan_iphone_berikut_dengan_harga"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_info"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/price"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_rincian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_item_price"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/rincian"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_rincian"
        android:text="@string/description"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btn_buy"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@id/tv_item_description"
        android:text="@string/dapatkan_sekarang"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="90dp"
        android:backgroundTint="#232D3F"/>


</RelativeLayout>